--- a/Xmonk/Makefile
+++ b/Xmonk/Makefile
@@ -42,7 +42,7 @@
 	-ffast-math -fomit-frame-pointer -fstrength-reduce -fdata-sections -Wl,--gc-sections $(SSE_CFLAGS)
 	LDFLAGS += -I. -shared -lm 
 	GUI_LDFLAGS += -I./gui -I$(HEADER_DIR) \
-	-L. $(LIB_DIR)libxputty.a -shared `pkg-config --static --cflags --libs cairo x11` -lm 
+	-L. $(LIB_DIR)libxputty.a -shared `pkg-config --cflags --libs cairo x11` -lm 
 	# invoke build files
 	OBJECTS = plugin/$(NAME).cpp 
 	GUI_OBJECTS = gui/$(NAME)_x11ui.c
