--- a/Xmonk/Makefile
+++ b/Xmonk/Makefile
@@ -10,11 +10,11 @@
 
 	# check CPU and supported optimization flags
 	ifneq ($(shell cat /proc/cpuinfo | grep sse3 ) , )
-		SSE_CFLAGS = -msse3 -mfpmath=sse
+		SSE_CFLAGS = -msse3 -mfpmath=sse -mfxsr
 	else ifneq ($(shell cat /proc/cpuinfo | grep sse2 ) , )
-		SSE_CFLAGS = -msse2 -mfpmath=sse
+		SSE_CFLAGS = -msse2 -mfpmath=sse -mfxsr
 	else ifneq ($(shell cat /proc/cpuinfo | grep sse ) , )
-		SSE_CFLAGS = -msse -mfpmath=sse
+		SSE_CFLAGS = -msse -mfpmath=sse -mfxsr
 		else ifneq ($(shell cat /proc/cpuinfo | grep ARM ) , )
 		ifneq ($(shell cat /proc/cpuinfo | grep ARMv7 ) , )
 			ifneq ($(shell cat /proc/cpuinfo | grep vfpd32 ) , )
@@ -29,14 +29,36 @@
 		SSE_CFLAGS =
 	endif
 
+	# check LD version
+	ifneq ($(shell xxd --version 2>&1 | head -n 1 | grep xxd),)
+		USE_XXD = 1
+	else ifneq ($(shell $(LD) --version 2>&1 | head -n 1 | grep LLD),)
+		ifneq ($(shell uname -a | grep  x86_64), )
+			LDEMULATION := elf_x86_64
+		else ifneq ($(shell uname -a | grep amd64), )
+			LDEMULATION := elf_x86_64
+		else ifneq ($(shell uname -a | grep i386), )
+			LDEMULATION := elf_i386
+		endif
+		USE_LDD = 1
+	else ifneq ($(shell gold --version 2>&1 | head -n 1 | grep gold),)
+		LD = gold
+	endif
+
 	# set bundle name
 	NAME = Xmonk
 	BUNDLE = $(NAME).lv2
 	VER = 0.4
 
+	RESOURCES_DIR :=./gui/
 	LIB_DIR := ../libxputty/libxputty/
 	HEADER_DIR := $(LIB_DIR)include/
 
+	RESOURCES := $(wildcard $(RESOURCES_DIR)*.png)
+	RESOURCES_OBJ := $(notdir $(patsubst %.png,%.o,$(RESOURCES)))
+	RESOURCES_LIB := $(notdir $(patsubst %.png,%.a,$(RESOURCES)))
+	RESOURCE_EXTLD := $(notdir $(patsubst %.png,%_png,$(RESOURCES)))
+	RESOURCEHEADER := xresources.h
 	# set compile flags
 	CXXFLAGS += -D_FORTIFY_SOURCE=2 -I. -I./dsp -I./plugin -fPIC -DPIC -O2 -Wall -funroll-loops \
 	-fstack-protector -ffast-math -fomit-frame-pointer -fstrength-reduce \
@@ -54,7 +76,7 @@
 
 .PHONY : $(HEADER_DIR)*.h mod all clean install uninstall 
 
-all : check $(NAME)
+all : $(RESOURCEHEADER) check $(NAME)
 	@mkdir -p ./$(BUNDLE)
 	@cp ./plugin/*.ttl ./$(BUNDLE)
 	@mv ./*.so ./$(BUNDLE)
@@ -69,6 +91,30 @@ check :
 ifdef ARMCPU
 	@echo $(RED)ARM CPU DEDECTED, please check the optimization flags
 	@echo $(NONE)
+endif
+
+$(RESOURCEHEADER): $(RESOURCES_OBJ)
+	rm -f $(RESOURCEHEADER)
+	for f in $(RESOURCE_EXTLD); do \
+		echo 'EXTLD('$${f}')' >> $(RESOURCEHEADER) ; \
+	done
+
+ifdef USE_XXD
+$(RESOURCES_OBJ): $(RESOURCES)
+	@#use this line to regenerate the *.c files from used images
+	@cd $(RESOURCES_DIR) && xxd -i $(patsubst %.o,%.png,$@) > $(patsubst %.o,%.c,$@)
+	$(CC) -c $(RESOURCES_DIR)$(patsubst %.o,%.c,$@) -o $@
+	$(AR) rcs $(patsubst %.o,%.a,$@) $@
+else ifdef USE_LDD
+$(RESOURCES_OBJ): $(RESOURCES)
+	cd $(RESOURCES_DIR) && $(LD) -r -b binary -m $(LDEMULATION) -z noexecstack $(patsubst %.o,%.png,$@) -o ../$@
+	$(AR) rcs $(patsubst %.o,%.a,$@) $@
+	LDFLAGS += -DUSE_LD=1
+else
+$(RESOURCES_OBJ): $(RESOURCES)
+	cd $(RESOURCES_DIR) && $(LD) -r -b binary -z noexecstack --strip-all $(patsubst %.o,%.png,$@) -o ../$@
+	$(AR) rcs $(patsubst %.o,%.a,$@) $@
+	LDFLAGS += -DUSE_LD=1
 endif
 
 clean :
@@ -97,7 +143,7 @@ uninstall :
 
 $(NAME) :
 	$(CXX) $(CXXFLAGS) $(OBJECTS) $(LDFLAGS) -o $(NAME).so
-	$(CC) $(CXXFLAGS) -Wl,-z,nodelete $(GUI_OBJECTS) $(GUI_LDFLAGS) -o $(NAME)_ui.so
+	$(CC) $(CXXFLAGS) -Wl,-z,nodelete $(GUI_OBJECTS)  -L. $(RESOURCES_LIB) $(GUI_LDFLAGS) -o $(NAME)_ui.so
 	$(STRIP) -s -x -X -R .comment -R .note.ABI-tag $(NAME).so
 	$(STRIP) -s -x -X -R .comment -R .note.ABI-tag $(NAME)_ui.so
 
