--- a/Xmonk/Makefile
+++ b/Xmonk/Makefile
@@ -118,6 +118,7 @@ $(RESOURCES_OBJ): $(RESOURCES)
 endif
 
 clean :
+	rm -f *.a *.o *.so xresources.h
 	@rm -f $(NAME).so
 	@rm -rf ./$(BUNDLE)
 	@echo ". ." $(BLUE)", clean up"$(NONE)
