--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,6 @@ name: build
 on:
   push:
 
-env:
-    PAWPAW_SKIP_LV2: 0
-
 jobs:
   linux:
     strategy:
@@ -18,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
-      - uses: distrho/dpf-makefile-action@v1
+      - uses: ./.github/actions
         with:
           target: ${{ matrix.target }}
           pawpaw: true
@@ -34,7 +31,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
-      - uses: distrho/dpf-makefile-action@v1
+      - uses: ./.github/actions
         with:
           target: ${{ matrix.target }}
           pawpaw: true
