--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -78,7 +78,7 @@ runs:
         sudo rm /etc/apt/sources.list.d/*.list
         sudo apt-get update -qq
         sudo apt-get purge -yqq git-man libclang* libgbm* libllvm* libmono* libnginx* moby* mono* msbuild* nginx* perl php* libgdiplus libpcre2-posix3 libselinux1-dev libzip4
-        sudo apt-get install -yqq --allow-downgrades git/jammy autoconf/jammy automake/jammy build-essential/jammy git/jammy libgd3/jammy libglib2.0-0/jammy libglib2.0-dev/jammy libpcre2-8-0/jammy libpcre2-16-0/jammy libpcre2-32-0/jammy libpcre2-posix2/jammy pkg-config/jammy
+        sudo apt-get install -yqq --allow-downgrades git/jammy autoconf/jammy automake/jammy build-essential/jammy pkg-config/jammy
         sudo apt-get clean
 
     # setup build options
