--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -57,6 +57,7 @@ runs:
         echo "PAWPAW_CACHE_VERSION=${PAWPAW_CACHE_VERSION:=6}" >> $GITHUB_ENV
         echo "PAWPAW_COMMIT_HASH=${PAWPAW_COMMIT_HASH:=76f3aef7313e4928967e80f37fbd8912ac8fbc77}" >> $GITHUB_ENV
         echo "PAWPAW_SKIP_GLIB=${PAWPAW_SKIP_GLIB:=1}" >> $GITHUB_ENV
+        echo "PAWPAW_SKIP_LV2=${PAWPAW_SKIP_LV2:=1}" >> $GITHUB_ENV
     - name: Fix GitHub's mess (detect version)
       if: ${{ runner.os == 'Linux' }}
       shell: bash
@@ -79,7 +80,7 @@ runs:
         sudo rm /etc/apt/sources.list.d/*.list
         sudo apt-get update -qq
         sudo apt-get purge -yqq git-man libclang* libgbm* libllvm* libmono* libnginx* moby* mono* msbuild* nginx* perl php* libgdiplus libpcre2-posix3 libselinux1-dev libzip4
-        sudo apt-get install -yqq --allow-downgrades git/jammy autoconf/jammy automake/jammy build-essential/jammy pkg-config/jammy ninja-build meson
+        sudo apt-get install -yqq --allow-downgrades git/jammy autoconf/jammy automake/jammy build-essential/jammy pkg-config/jammy ninja-build meson lv2-dev
         sudo apt-get clean
 
     # setup build options
