--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -67,11 +67,13 @@ runs:
       if: ${{ runner.os == 'Linux' && env.UBUNTU_VERSION == '20.04' }}
       shell: bash
       run: |
+        echo "PAWPAW_CACHE_VERSION=${PAWPAW_CACHE_VERSION:=5}" >> $GITHUB_ENV
         sudo rm /etc/apt/sources.list.d/*.list
         sudo apt-get update -qq
         sudo apt-get purge -yqq git-man libclang* libgbm* libllvm* libmono* libnginx* moby* mono* nginx* perl php* libgdiplus libpcre2-posix3 libselinux1-dev libzip4
-        sudo apt-get install -yqq --allow-downgrades autoconf/focal automake/focal build-essential/focal git/focal libgd3/focal libglib2.0-0/focal libglib2.0-dev/focal libpcre2-8-0/focal libpcre2-16-0/focal libpcre2-32-0/focal libpcre2-posix2/focal pkg-config/focal
+        sudo apt-get install -yqq --allow-downgrades autoconf/focal automake/focal build-essential/focal git/focal libgd3/focal libglib2.0-0/focal libglib2.0-dev/focal libpcre2-8-0/focal libpcre2-16-0/focal libpcre2-32-0/focal libpcre2-posix2/focal pkg-config/focal ninja-build/focal python3-pip/focal
         sudo apt-get clean
+        sudo pip3 install meson
     - name: Fix GitHub's mess (ubuntu-22.04)
       if: ${{ runner.os == 'Linux' && env.UBUNTU_VERSION == '22.04' }}
       shell: bash
@@ -81,7 +83,6 @@ runs:
         sudo apt-get purge -yqq git-man libclang* libgbm* libllvm* libmono* libnginx* moby* mono* msbuild* nginx* perl php* libgdiplus libpcre2-posix3 libselinux1-dev libzip4
         sudo apt-get install -yqq --allow-downgrades git/jammy autoconf/jammy automake/jammy build-essential/jammy pkg-config/jammy ninja-build meson
         sudo apt-get clean
-
     # setup build options
     - name: Setup build options
       shell: bash
