--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,16 @@ jobs:
           target: ${{ matrix.target }}
           pawpaw: true
 
+  source:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - uses: distrho/dpf-makefile-action@v1
+        with:
+          target: source
+
 #  pluginval:
 #    runs-on: ubuntu-20.04
 #    permissions:
